Correct the align of the filter

--- a/SASS/Layout/_main.scss
+++ b/SASS/Layout/_main.scss
@@ -47,11 +47,19 @@ section.title {
   padding: 30px;
 
   @media screen and (min-width: 768px) {
-    max-width: 1053px;
+    box-shadow: 0px 2px 4px 0px #00000026;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin: auto;
   }
 
   .filter-title {
     width: 100%;
+
+    @media screen and (min-width: 768px) {
+      width: 1053px;
+    }
   }
 
   .filter-container {
@@ -63,6 +71,7 @@ section.title {
     @media screen and (min-width: 768px) {
       flex-direction: row;
       justify-content: space-between;
+      width: 1053px;
     }
   }
 
