--- a/SASS/style.css
+++ b/SASS/style.css
@@ -206,11 +206,20 @@ section.title_button {
 }
 @media screen and (min-width: 768px) {
   .container-filter {
-    max-width: 1053px;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1490196078);
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin: auto;
   }
 }
 .container-filter .filter-title {
   width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .container-filter .filter-title {
+    width: 1053px;
+  }
 }
 .container-filter .filter-container {
   display: flex;
@@ -222,6 +231,7 @@ section.title_button {
   .container-filter .filter-container {
     flex-direction: row;
     justify-content: space-between;
+    width: 1053px;
   }
 }
 .container-filter .filter-group {
